fix(daffio): widens the api doc name and ellipsis the ref, instead of squishing the label

--- a/apps/daffio/src/app/docs/api-docs/components/api-docs-list/api-docs-list.component.scss
+++ b/apps/daffio/src/app/docs/api-docs/components/api-docs-list/api-docs-list.component.scss
@@ -23,6 +23,13 @@
 		display: flex;
 	}
 
+	&__name {
+		width: 100%;
+    display: block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+	}
+
 	&__label {
 		@include type-label();
 		display: flex;
@@ -35,6 +42,6 @@
 
 	&__children {
 		display: grid;
-		grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+		grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 	}
 }
